# ALF

./: .gitignore  README.md  config.yml  pyproject.toml
app/: config.py  debug.py  main.py  schemas.py  utils.py
app/features/: extractor.py  preprocessor.py
app/features/extractors/: __init__.py  base.py  boolean.py  ignore.py  ip_address.py  json_expand.py  numeric.py  semver.py  str_categorical.py  str_identifier.py  string.py  timestamp.py
app/features/preprocessors/: __init__.py  base.py  drain3_encoder.py  frequency_encoder.py  hash_index.py  label_index.py  min_max_scaler.py  noop.py  one_hot_encoder.py  one_hot_hash_encoder.py  pass_through.py  sentence_transformer_encoder.py  standard_scaler.py
app/models/: base.py  detector.py  factory.py
app/models/autoencoder/: __init__.py  autoencoder_detector.py  network.py
app/models/half_space_trees/: __init__.py  half_spaces_trees_detector.py  model_slice.py  stats_window.py
app/models/noop/: __init__.py  noop_detector.py
app/orchestration/: labels.py  registry.py  store.py
benchcases/autoencoder/adbench-cardio/: config.testcase.yaml  config.yaml  output_001_score.json
benchcases/autoencoder/linux-logs-loghub/: config.testcase.yaml  config.yaml  output_001_score.json
benchcases/autoencoder/nsl-kdd/: config.testcase.yaml  config.yaml  output_002_score.json
scripts/: gen_signin_events.py  regen_benchcase_outputs.py  regen_testcase_outputs.py  train_and_detect_from_elastic.py  utils.py
tests/: bench_cases.py  case_runner.py  test_cases.py  test_detector_cases.py
(+209 files in other folders)
