[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-anomaly-detection"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "river>=0.24.2",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.8.0",
    "torch>=2.0.0",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
